--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			<article class="cv-card" role="article" aria-label="Curriculum Vitae">
 				<aside class="left" aria-label="Sidebar">
 					<div class="avatar">
-						<img src="IMG_9555.jpg" alt="Zdjęcie Jakuba" id="avatar">
+						<img src="https://github.com/xlucifx/cv/blob/main/IMG_9555.jpg?raw=true" alt="Zdjęcie Jakuba" id="avatar">
 					</div>
 					<div class="name-under-photo" aria-hidden="false">
 						Jakub Guzy
@@ -279,3 +279,4 @@
 			setTimeout(()=>{
 
 				applyTexts(en);
+
