--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 							<div id="meta1" class="meta" data-pl="Projekty zlecone / freelance" data-en="Commissioned projects / freelance">Projekty zlecone / freelance</div>
 							<ul class="bullet">
 								<li id="r1l1" data-pl="Tworzenie responsywnych stron WWW dla klientów indywidualnych." data-en="Creating responsive websites for individual clients.">Tworzenie responsywnych stron WWW dla klientów indywidualnych.</li>
-								<li id="r1l2" data-pl="Praca z HTML, CSS i JavaScript i optymalizacja wydajności." data-en="Working with HTML, CSS and JavaScript; performance optimization and basic SEO.">Praca z HTML, CSS i JavaScript, optymalizacja wydajności i SEO podstawy.</li>
+								<li id="r1l2" data-pl="Praca z HTML, CSS i JavaScript i optymalizacja wydajności." data-en="Working with HTML, CSS and JavaScript; performance optimization.">Praca z HTML, CSS i JavaScript, optymalizacja wydajności i SEO podstawy.</li>
 							</ul>
 						</div>
 
@@ -279,4 +279,5 @@
 			setTimeout(()=>{
 
 				applyTexts(en);
+
 
