--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!doctype html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Your Name — CV</title>
-	<!doctype html>
 	<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<title>Your Name — CV</title>
+		<title>Jakub Guzy — CV</title>
 		<meta name="description" content="Curriculum Vitae of Your Name">
 		<style>
 			:root{
@@ -277,6 +271,7 @@
 	</body>
 	</html>
 			
+
 
 
 
